Deal with urls as arguments